objects/LogMessage__e.object
<CustomObject>
    <label>LogMessage</label>
    <pluralLabel>LogMessages</pluralLabel>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quiddity__c</fullName>
        <label>Quiddity</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>